# Robot_miniproject_Group23

./: README.md  config_robot.py  start_agent_computer.sh
firmware/esp32_firmware/: main.cpp
ros2_ws/src/maze_nav_bringup/: package.xml  setup.py
ros2_ws/src/maze_nav_bringup/launch/: maze_nav_bringup.launch.py
ros2_ws/src/maze_nav_fsm/: package.xml  setup.py
ros2_ws/src/maze_nav_fsm/maze_nav_fsm/: maze_fsm.py
ros2_ws/src/maze_nav_planner/: package.xml  setup.py
ros2_ws/src/maze_nav_planner/maze_nav_planner/: global_astar_planner.py
ros2_ws/src/maze_nav_vision/: package.xml  setup.py
ros2_ws/src/maze_nav_vision/maze_nav_vision/: blue_tape_detector.py
yahboomcar_nav/maps/: testaa.yaml  yahboom_map.pgm
