<?xml version="1.0"?>
<package format="3">
  <name>maze_nav_planner</name>
  <version>0.0.1</version>
  <description>Global A* planner for MicroROS-ESP32 maze navigation demo.</description>
  <maintainer email="xuhaozhe2022@bupt.edu.cn">Haozhe Xu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
  </export>
</package>


