<?xml version="1.0"?>
<package format="3">
  <name>maze_nav_vision</name>
  <version>0.0.1</version>
  <description>Blue tape soft obstacle detection node for maze navigation.</description>
  <maintainer email="xuhaozhe2022@bupt.edu.cn">Haozhe Xu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>


